ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
  namespace: minio-tenant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.k8.succeedex.in`)
      kind: Rule
      services:
        - name: myminio-console
          port: 9090
          scheme: https
          serversTransport: minio-transport
  tls:
    secretName: minio-cert-tls
